--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
         }
         .replay-button:hover { transform: translateY(-2px); box-shadow: 0 6px 16px rgba(245,158,11,0.4); }
         .replay-button:active { transform: translateY(0); }
+        .player-replay-button {
+            display: block; margin: 0 auto 8px; padding: 8px 18px;
+            font-size: 0.85rem; border-radius: 10px;
+        }
 
         .reveal-button {
             padding: 10px 28px; border: none; border-radius: 12px;
@@ -2125,6 +2129,7 @@ function onlineGameStart(msg) {
     // Restore ready UI on reconnect during pending phase
     if (state.pendingChar) {
         renderReadyButton();
+        renderPlayerReplayButton();
         updateReadyButton();
         updateReadyIndicators();
         if (state.role === 'moderator') {
@@ -2181,6 +2186,25 @@ function renderReadyButton() {
 
 function removeReadyButton() {
     const btn = document.getElementById('ready-btn');
+    if (btn) btn.remove();
+}
+
+function renderPlayerReplayButton() {
+    if (state.gameType !== 'online' || state.role !== 'player') return;
+    if (!state.pendingChar) return;
+    removePlayerReplayButton();
+    const btn = document.createElement('button');
+    btn.className = 'replay-button player-replay-button';
+    btn.id = 'player-replay-btn';
+    btn.textContent = t('replay');
+    btn.onclick = () => { ensureAudio(); speakChar(state.pendingChar); };
+    const gameScreen = document.getElementById('game-screen');
+    const boardsContainer = document.getElementById('boards-container');
+    gameScreen.insertBefore(btn, boardsContainer);
+}
+
+function removePlayerReplayButton() {
+    const btn = document.getElementById('player-replay-btn');
     if (btn) btn.remove();
 }
 
@@ -2249,6 +2273,7 @@ function clearReadyState() {
     state.pendingReadyIds = [];
     state.isReady = false;
     removeReadyButton();
+    removePlayerReplayButton();
     updateReadyIndicators();
     clearModeratorReadyInfo();
 }
@@ -2289,6 +2314,7 @@ function onlineCharPending(char) {
 
     renderOnlineStatusBanner();
     renderReadyButton();
+    renderPlayerReplayButton();
 }
 
 function onlineRevealed(msg) {
