--- a/index.html
+++ b/index.html
@@ -457,7 +457,8 @@
             .setup-container h1 { font-size: 1.6rem; }
             .board-card { min-width: 220px; }
             .players-2 .board-card, .players-3 .board-card, .players-4 .board-card { width: 100%; max-width: 360px; }
-            .cell { font-size: 0.9rem; border-radius: 6px; }
+            .cell { font-size: 1.1rem; border-radius: 6px; }
+            .boards-container.online-player .board-card.primary .cell { font-size: 1.4rem; }
             .caller-current { width: 72px; height: 72px; }
             .caller-current span { font-size: 1.6rem; }
             .randomize-button { width: 60px; height: 60px; font-size: 1.6rem; }
