--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>บิงโกภาษาไทย</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎯</text></svg>">
+    <meta name="app-version" content="dev">
 </head>
 <body>
 
@@ -108,6 +109,7 @@
     </div>
 </div>
 
+<div id="version-footer" class="version-footer">vdev</div>
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
