Move version footer below content and add copyright text

--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,7 @@
 
         <button class="start-button" id="start-game-btn" data-i18n="startGame">เริ่มเกม! 🎮</button>
     </div>
+    <div class="version-footer" data-version-footer>vdev</div>
 </div>
 
 <!-- ====== CONNECTION STATUS ====== -->
@@ -61,6 +62,7 @@
         <button class="start-button" id="lobby-start-btn" disabled></button>
         <p id="lobby-waiting-msg" class="hidden" style="color:#9ca3af; margin-top:12px; font-weight:600;"></p>
     </div>
+    <div class="version-footer" data-version-footer>vdev</div>
 </div>
 
 <!-- ====== GAME SCREEN ====== -->
@@ -94,6 +96,7 @@
         <button class="ctrl-btn" id="new-game-btn" data-i18n="newGame">🔄 เกมใหม่</button>
         <button class="ctrl-btn lang-toggle" id="game-lang-toggle">🇬🇧 EN</button>
     </div>
+    <div class="version-footer" data-version-footer>vdev</div>
 </div>
 
 <!-- ====== WIN OVERLAY ====== -->
@@ -109,7 +112,6 @@
     </div>
 </div>
 
-<div id="version-footer" class="version-footer">vdev</div>
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
